Mobile fullscreen working and fixed ground out of view. Reload on resize

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+#fullscreen{
+	position: absolute;
+}
+
 body {
 	display: flex;
 	justify-content: center;
